--- a/src/styles.css
+++ b/src/styles.css
@@ -17,3 +17,11 @@
   background-color: blue;
   display: inline-block;
 }
+
+.red {
+  background-color: red;
+}
+
+.yellow {
+  background-color: yellow;
+}
