# Grid Given a column we want to create multiple columns. Simple repetition could be used to do this; however, this could lead to a lot of code. We want to use Components to repeat our code.
To create a component, we define a `function` with the name `Column`. This function should return the values that correspond to the column we created beforehand. We then call this function inside of our `App` function by treating it as an html element `<Column></Column>`. We want 7 of these.

## Further Reading
 - [https://www.google.com/search?q=react+component](react component) for a reactjs documentation on react components

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,17 @@
   font-family: sans-serif;
   text-align: center;
 }
+.slot {
+  height: 50px;
+  width: 50px;
+  background-color: transparent;
+  border-radius: 50%;
+  margin: 5px;
+}
+.column {
+  display: inline-block;
+}
+.board {
+  background-color: blue;
+  display: inline-block;
+}
