# Slot Color We want to be able to set the slot color to be dependent on the current player.
We combine our work done in creating a slot a with our work changing a player turn.

Then, we create css definitions for coloring in those slots.

Instead of our button being responsible for the change in player, we can assign this to our slot.

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@
 .slot {
   height: 50px;
   width: 50px;
-  background-color: transparent;
+  background-color: white;
   border-radius: 50%;
   margin: 5px;
 }
